# postgres_ingestion

./: docker-compose.yml  pyproject.toml
scripts/: data_ingestion.py
