[tool.poetry]
name = "03-postgres"
version = "0.1.0"
description = "Test Ingesta a Postgres"
authors = ["KItzepsillo <kevin.itzep94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
