[tool.poetry]
name = "03-postgres"
version = "0.1.0"
description = "Test Ingesta a Postgres"
authors = ["KItzepsillo <kevin.itzep94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.9"
config = "^0.5.1"
flake8 = "^7.1.1"
pre-commit = "^3.8.0"
faker = "^27.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
